Moved to dynamic track list loading with a new homemade spicetify extension, and removed the unused playlists.json loading